# tomato_game

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  WIn32TomatoGame.aps  build.bat  build_DLL.bat  build_and_run.bat  build_times.txt  compile_commands.json  debug.bat  neovim.json  project.4coder  resource.h  run.bat  todo.txt  tomato_game.org
assets/: rng_nums.txt
data/: bush.argb  cat.argb  pink.argb  player_e.argb  player_n.argb  player_s.argb  player_w.argb  tomato_editor  tomato_editor.ctm  tomato_game.ctm  tree.argb
scripts/: batch_convert_argb.py  build.bat  build_DLL.bat  build_DLL.sh  cl_debug.bat  common.bat  compile_commands_move.py  convert_to_camel_case.py  debug.bat  debug_cl.bat  gen_compile_commands.sh  gen_vs.bat  run.bat  static_check.bat  static_check.sh
shaders/: main.hlsl
src/: '  ;w  ArgbConverterWin32.cpp  BaseTypes.h  Console.h  Macros.h  PlatformWin32.cpp  PlatformWin32.hpp  SimRegion.cpp  SimRegion.hpp  TomatoFramework.h  TomatoGame.cpp  TomatoGame.h  Utils.cpp  Utils.h  Win32TomatoGame.cpp  Win32TomatoGame.h  base_types.h  base_types.hpp  common.hpp  console.hpp  entity.cpp  entity.hpp  framework.hpp  game.cpp  game.hpp  image.hpp  image_converter.cpp  intrinsic.cpp  intrinsic.hpp  intrinsics.hpp  macros.hpp  math.cpp  math.hpp  platform.h  platform_win32.cpp  platform_win32.hpp  rng_nums.h  sim_region.cpp  sim_region.hpp  (+82 more)
src/argb_converter/: tom_argb_converter.cpp
